--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build -p $PORT"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
