--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
-  "name": "remix-app-template-js",
+  "name": "remix-app-template",
   "description": "",
   "license": "",
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build -p $PORT"
+    "start": "remix-serve build"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
@@ -17,7 +17,10 @@
     "@remix-run/serve": "^1.1.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3"
+    "@remix-run/dev": "^1.1.3",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
