--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "start": "remix-serve build -p $PORT"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.3.1",
     "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.3",
-    "@remix-run/serve": "^1.1.3"
+    "remix": "^1.1.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
