--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy Container
+    name: Build and Deploy Frontend
     runs-on: ubuntu-20.04
     steps:
     # https://github.com/marketplace/actions/checkout
