--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.1.2"
   },
