print alpaca variables

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,4 +39,4 @@ RUN go install
 RUN go build -o app
 
 # start app
-CMD ./app
+CMD echo "$APCA_API_KEY_ID $APCA_API_SECRET_KEY $APCA_API_BASE_URL" && ./app
