--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "backend"
+      - "backend/**"
       - ".github/workflows/deploy-backend.yml"
 
 env:
