--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "frontend"
+      - "frontend/**"
       - ".github/workflows/deploy-frontend.yml"
 
 env:
