--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
     "@monaco-editor/react": "^4.3.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
-    "d3": "^7.4.2",
+    "chart.js": "^3.7.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3"
   },
